Added Benchmark file APIBench.c. It is necessary to correct adjust the variable eleitoresHabilitados (number of voters, each casting 6 votes) and numTests (number of repetitions for each scenario).

--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,11 @@ SigZKP*
 voteOutput*
 ZKPOutput*
 voting_*
+APIBench
 APITest
 APITest copy.c
 resultado*
 votingSimulator
 .vscode
 dilithium/
+BenchSim
